# archive-mirror

./: .envrc  LICENSE  README.md  flake.nix  mirror.py  pyproject.toml  test_integration.py  test_mirror.py
nixos/: default.nix  example.nix  module.nix
